conferencier-derive/tests/trybuild/fail_unsupported_type.stderr
error: unsupported field type `HashMap`
 --> tests/trybuild/fail_unsupported_type.rs:5:10
  |
5 |     map: HashMap<String, String>,
  |          ^^^^^^^
